<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Edit"
    tools:showIn="@layout/activity_edit"
    android:background="?attr/background_custom">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-145dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="900dp">

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="113dp"
                android:layout_marginTop="50dp"
                android:text="@string/delete"
                android:theme="@style/buttonStyle"
                app:layout_constraintStart_toStartOf="@+id/noteVerfallsdatum"
                app:layout_constraintTop_toBottomOf="@+id/noteVerfallsdatum" />

            <EditText
                android:id="@+id/noteDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="beschreibung"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/noteBeschreibung"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColor="?attr/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/beschreibung" />

            <EditText
                android:id="@+id/noteVerfallsdatum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="verfallsdatum"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/noteVerfallsdatum"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColor="?attr/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verfallsdatum" />


            <EditText
                android:id="@+id/noteTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="produktname"
                android:ems="10"
                android:hint="@string/noteTitle"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="?attr/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titel_titel" />

            <TextView
                android:id="@+id/verfallsdatum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/verfallsdatum"
                android:textColor="?attr/textColorAccent"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteDetails" />

            <TextView
                android:id="@+id/beschreibung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/beschreibung"
                android:textColor="?attr/textColorAccent"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteTitle" />

            <TextView
                android:id="@+id/titel_titel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/titel_titel"
                android:textColor="?attr/textColorAccent"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>